       Canon PIXMA MP190  (EXPERIMENTAL)
       Canon PIXMA MP210  (EXPERIMENTAL)
       Canon PIXMA MP240  (EXPERIMENTAL)
       Canon PIXMA MP375R
       Canon PIXMA MP470  (EXPERIMENTAL)
       Canon PIXMA MP490  (EXPERIMENTAL)
       Canon PIXMA MP530  (EXPERIMENTAL)
       Canon PIXMA MP900  (EXPERIMENTAL)
       Canon PIXMA MX370  (EXPERIMENTAL)
       Canon PIXMA MX430  (EXPERIMENTAL)
       Canon PIXMA MG2100 (EXPERIMENTAL)
       Canon PIXMA MG3100 (EXPERIMENTAL)
       Canon PIXMA MG4100 (EXPERIMENTAL)
       Canon PIXMA MG5300 (EXPERIMENTAL)
       Canon PIXMA MG6200 (EXPERIMENTAL)
       Canon PIXMA MG8200 (EXPERIMENTAL)

     - Epson inkjet printers:

       EPSON ME Office 940FW
       EPSON PX 204
       EPSON PX 504A
       EPSON Stylus CX3900
       EPSON Stylus NX420
       EPSON Stylus NX530
       EPSON Stylus NX635
       EPSON Stylus SX420
       EPSON Stylus TX420
       EPSON Stylus Office BX535WD
       EPSON Stylus Office BX630FW
       EPSON Stylus Office BX635FWD
       EPSON Stylus Office TX620FWD
       EPSON Stylus Photo RX650
       EPSON Stylus SX535WD
       EPSON WorkForce 545
       EPSON WorkForce 630
       EPSON WorkForce 645

     - Epson wide carriage inkjet printers:

       EPSON Stylus Pro 7900 (Partial -- no orange/green inks)
       EPSON Stylus Pro 9900 (Partial -- no orange/green inks)

       These printers function as 8 color photo printers using CMYK
       inks, similar to the 7890/9890.  They have not been tuned.  At
       present, we do not have a schedule for adding support for the
       green and orange inks.

  2) A problem whereby printing did not work at all on some Linux
     distributions has been fixed (3299815 CUPS PPD broken on Linux).

  3) A crash with the EPSON Stylus Photo R3000 has been fixed.

  4) The following printer models were completely redefined or had
     major changes carried out in the supported modes:

       Canon   BJC 3000   (EXPERIMENTAL)
       Canon   BJC S300   (EXPERIMENTAL)